# cnc3018-offline-controller-marlin

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.adoc  platformio.ini  presets.ini  spindle.txt  test.nc  test.py
cmake/: ArduinoToolchain.cmake  ArduinoToolchainAvr.cmake  ArduinoToolchainEsp32.cmake  ArduinoToolchainStm32.cmake
cmake/Platform/: Arduino.cmake  Util.cmake
cmake/Platform/Core/: BoardPropertiesReader.cmake  LibraryFinder.cmake  LoadPlatformSettings.cmake  SourceFinder.cmake
cmake/Platform/Core/BoardFlags/: CompilerFlagsSetter.cmake  CompilerFlagsSetterStm32.cmake  CompilerFlagsSetter_esp32.cmake  CompilerFlagsSetter_stm32.cmake  FlagsSetter.cmake  LinkerFlagsSetter.cmake  LinkerFlagsSetterEsp32.cmake  LinkerFlagsSetterStm32.cmake  LinkerFlagsSetter_avr.cmake  LinkerFlagsSetter_esp32.cmake  LinkerFlagsSetter_stm32.cmake
cmake/Platform/Core/Examples/: ArduinoExampleFactory.cmake
cmake/Platform/Core/Libraries/: ArduinoLibraryFactory.cmake  CoreLibraryFactory.cmake
cmake/Platform/Core/Sketch/: ArduinoSketchFactory.cmake  ArduinoSketchToCppConverter.cmake
cmake/Platform/Core/Targets/: ArduinoBootloaderUploadTargetCreator.cmake  ArduinoBootloaderUploadTargetCreatorStm32.cmake  ArduinoFirmwareTargetCreator.cmake  ArduinoFirmwareTargetCreator_esp32.cmake  ArduinoFirmwareTargetCreator_stm32.cmake
cmake/Platform/Extras/: CalculateFirmwareSize.cmake
cmake/Platform/Generation/: ArduinoExampleGenerator.cmake  ArduinoFirmwareGenerator.cmake  ArduinoLibraryExampleGenerator.cmake  ArduinoLibraryGenerator.cmake
cmake/Platform/Initialization/: DefaultCFlagsAvr.cmake  DefaultCFlagsStm32.cmake  DefaultCFlags_esp32.cmake  DefaultCFlags_stm32.cmake  DetectVersion.cmake  FindHardwarePlatform.cmake  FindPrograms.cmake  Initializer.cmake  LoadArduinoPlatformSettings.cmake  RegisterHardwarePlatform.cmake  RegisterSpecificHardwarePlatform.cmake  SetDefaults.cmake  SetupCompilerSettings.cmake  SetupExampleCategories.cmake
lib/: CMakeLists.txt
lib/printfloat/: CMakeLists.txt  printfloat.cpp
src/: Buffer.h  Job.h  JobFsm.cpp  JobFsm.h  WatchedSerial.h  constants.h  debug.h  features.h  main.cpp  observeble_states.h  util.cpp  util.h
src/devices/: Config.cpp  Config.h  DeviceDetector.cpp  DeviceDetector.h  GCodeDevice.cpp  GCodeDevice.h  GrblDevice.cpp  GrblDevice.h  MarlinDevice.cpp  MarlinDevice.h
src/gcode/: gcode.h
src/ui/: DRO.cpp  DRO.h  DetectorScreen.cpp  DetectorScreen.h  Display.cpp  Display.h  FileChooser.cpp  FileChooser.h  GrblDRO.cpp  GrblDRO.h  HasMenu.cpp  HasMenu.h  MarlinDRO.cpp  MarlinDRO.h  Screen.h
